Changes to addapt filter on mobile and desktop style (pending final fixes)

--- a/app/design/frontend/Vass/PU/Magento_Catalog/web/css/source/module/_toolbar.less
+++ b/app/design/frontend/Vass/PU/Magento_Catalog/web/css/source/module/_toolbar.less
@@ -72,7 +72,7 @@
 
     .sorter {
             position: absolute;
-            top: 13px;
+            top: 11px;
             right: 7px;
             padding: 4px 0 0;
 
